Correction of layout: 1. header - vertically aligned,text size and bold 2. footer - ver&hor alignment 3. sidebar shrink=0
Main-Content TBD

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,27 +2,60 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display:flex;
+  flex-direction:column;
+}
+
+.footer, .header {
+  display:flex;
+  align-items: center;
 }
 
 .header {
-  height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  font-weight: 900;
+  padding: 16px;
+}
+
+.Main-Content {
+  display:flex;
+}
+
+.Cards {
+  padding: 16px;
+  display:flex;
+  flex-direction: row;
+  align-content: space-between;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  justify-content: center;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
+  font-size: 24px;
+  flex-shrink: 0;
+  padding: 16px;
+
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
-  border-radius: 4px;
+  border-radius: 4px;  
+  padding: 8px;
+}
+
+ul {
+  text-decoration: none;
+  list-style-type:none;
+  color: white;
 }
